# hermes-jobapps

./: .gitignore  AGENTS.md  DESIGN.md  GOAL.md  LICENSE  Privacy.md  README.md  pyproject.toml
.hermes/plugins/jobapps/: __init__.py  plugin.yaml
.hermes/plugins/jobapps/skills/jobapps-cockpit/: SKILL.md
config/: jobapps.default.json  jobapps.example.yaml
design-system/: ASCII_ART.md  COLORS.md  COMPONENTS.md  README.md  SKIN_SYSTEM.md  TOKENS.css  TYPOGRAPHY.md
docs/: ARCHITECTURE.md  ARCHITECTURE_RESEARCH.md  BACKEND_GAPS.md  BRAIN.md  BRANDING.md  DISCOVERY.md  HERMES_INTEGRATION.md  INTEGRATIONS.md  OPTIMIZATION_PASS.md  PERSONALIZATION.md  PRIVACY.md  SNAPSHOT_PUBLISH.md
hermes_jobapps/: __init__.py  agent.py  chat.py  config.py  discovery.py  evaluator.py  hermes_client.py  hermes_commands.py  importer.py  knowledge.py  latex.py  materials.py  networking.py  prompts.py  repository.py  runs.py  server.py  tools.py  typst.py  workflow.py  writers.py
skills/jobapps-application-writer/: SKILL.md
skills/jobapps-outreach-operator/: SKILL.md
skills/jobapps-role-evaluator/: SKILL.md
tests/: test_engine.py
web/: app.js  index.html  styles.css
